# leak

./: .gitignore  Justfile  PROJECT_GUIDE.md  README.md  build_stage2inf_testsets.py  generate_ppt.py  generate_weekly_ppt 2.py  generate_weekly_ppt.py  preparedata5s.py  pyproject.toml  标签.py  答辩可能提问与实验基本原理.docx
.claude/: settings.json
.github/workflows/: compile-thesis.yml
2024-latex/: create_defense_ppt.py  create_defense_ppt_refactored.py  defense_presentation.pptx  defense_qa_and_principles.md  defense_speech.md  experiment_tables.md  figure_prompts.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv  process_guidance_records.md  translation_body_murvay.tex  translation_murvay_main.aux  translation_murvay_main.fdb_latexmk  translation_murvay_main.fls  translation_murvay_main.out  translation_murvay_main.tex  translation_murvay_main.xdv  translation_template.aux  translation_template.fdb_latexmk  translation_template.fls  translation_template.out  translation_template.tex  translation_template.xdv  ~$defense_presentation_refactored.pptx  改进.md  答辩记录表.txt
2024-latex/appendix/: acknowledgements.aux  acknowledgements.tex
2024-latex/include/: abstract.aux  abstract.tex  body.aux  body.tex  cover.aux  cover.tex  declaration.aux
2024-latex/references/: ref.bib
2024-latex/setup/: format.tex  package.tex
_天津大学__Tianjin_University__TJU_2024本科生毕业论文/: main.tex
_天津大学__Tianjin_University__TJU_2024本科生毕业论文/include/: abstract.tex  body.tex  cover.tex
_天津大学__Tianjin_University__TJU_2024本科生毕业论文/setup/: format.tex
configs/: config.yaml  stage1.yaml  stage1_conformer.yaml  stage2.yaml  stage2_conformer.yaml
docs/experiments/: ablation_baseline_guide.md
docs/superpowers/plans/: 2026-05-07-thesis-expansion.md
notebooks/: quickstart.ipynb
scripts/: train_conformer.sh
src/: __init__.py  evaluate.py  inference.py  train.py
src/data/: dataset.py
src/leak_detection/: __init__.py
src/models/: conformer.py
src/utils/: helpers.py
附件3.天津大学本科生毕业设计（论文）撰写规范及模板（2026届）/: 【2025修订版】天津大学本科生毕业设计（论文）相关材料撰写规范.docx
附件3.天津大学本科生毕业设计（论文）撰写规范及模板（2026届）/【2025修订版】天津大学本科生毕业设计（论文）模板-装订一册/: 【2025修订版】1-1天津大学本科生毕业论文模板.docx  【2025修订版】1-1天津大学本科生毕业设计模板.docx
附件3.天津大学本科生毕业设计（论文）撰写规范及模板（2026届）/天津大学本科生毕业设计（论文）附件模板-装订一册/: 1天津大学本科生毕业设计（论文）附件封面.docx  2天津大学本科生毕业设计（论文）任务书.docx  3天津大学本科生毕业设计（论文）开题报告.docx  4天津大学本科生毕业设计（论文）外文资料和中文译文.docx  5天津大学本科生毕业设计（论文）过程指导记录表.docx  6天津大学本科生毕业设计（论文）中期检查记录表.docx  7天津大学本科生毕业设计（论文）指导教师评阅书.docx  8天津大学本科生毕业设计（论文）评阅教师评阅书.docx  9天津大学本科生毕业设计（论文）答辩记录书.docx
(+36 files in other folders)
