[project]
name = "pipeline-leak-detection"
version = "0.1.0"
description = "Segmented signal training pipeline for pipeline leak detection and distance estimation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["signal", "deep-learning", "pytorch", "leak-detection", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-pptx>=1.0.0",
    
    # Utilities
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    
    # Code Quality
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    
    # Documentation
    "sphinx>=7.0.0",
]

[project.scripts]
leak-train = "leak_detection.cli.train:main"
leak-prepare-dataset = "leak_detection.cli.prepare_dataset:main"

[project.urls]
Homepage = "https://github.com/yourusername/pipeline-leak-detection"
Repository = "https://github.com/yourusername/pipeline-leak-detection"
Issues = "https://github.com/yourusername/pipeline-leak-detection/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leak_detection"]

[tool.uv]
# uv 特定的配置
python-preference = "only-managed"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
